--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
       <version>${switchyard.version}</version>
     </dependency>
 
+	<dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpclient</artifactId>
+		<version>4.2.1</version>
+	</dependency>
  
     <dependency>
       <groupId>org.switchyard</groupId>
